[gd_scene load_steps=28 format=2]

[ext_resource path="res://Asset/Home/Latar Game Basic.png" type="Texture" id=1]
[ext_resource path="res://Asset/Body Puzzle/boy/Tulisan 13.png" type="Texture" id=2]
[ext_resource path="res://Scene/GAme/BodyPuzze/piece/stage1/rambut.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/GAme/BodyPuzze/bodyPuzzle.gd" type="Script" id=4]
[ext_resource path="res://Asset/Body Puzzle/boy/Kepala.png" type="Texture" id=5]
[ext_resource path="res://Scene/GAme/BodyPuzze/piece/stage1/mulut.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/GAme/BodyPuzze/piece/stage1/mata.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/GAme/BodyPuzze/piece/stage1/alis.tscn" type="PackedScene" id=8]
[ext_resource path="res://Asset/Body Puzzle/boy/Mulut _ Hidung.png" type="Texture" id=9]
[ext_resource path="res://Asset/Body Puzzle/boy/Full Head.png" type="Texture" id=10]
[ext_resource path="res://Scene/Main/gameMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scene/Main/GUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scene/effect.tscn" type="PackedScene" id=13]
[ext_resource path="res://Asset/Body Puzzle/audio/Benar.mp3" type="AudioStream" id=14]
[ext_resource path="res://Asset/Quicksand/MoreSugar-Thin.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Asset/Body Puzzle/audio/Bermain_20Mengenal_20Anggota_20Tubuh.mp3" type="AudioStream" id=16]
[ext_resource path="res://Asset/antrian/Cara Bermain BG.png" type="Texture" id=17]
[ext_resource path="res://Asset/Body Puzzle/boy/Laki-laki TK.png" type="Texture" id=18]
[ext_resource path="res://Asset/Body Puzzle/girls/Perempuan TK.png" type="Texture" id=19]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.792157, 0.8, 0.835294, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.792157, 0.8, 0.835294, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72.5, 18.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64.5, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 61, 10 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=7]
resource_name = "New Anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("starting:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001

[node name="bodyPuzzle" type="Node2D"]
script = ExtResource( 4 )

[node name="body" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="body"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="body"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="body"]
margin_left = 168.0
margin_top = 256.0
margin_right = 523.0
margin_bottom = 613.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="karakter" type="TextureRect" parent="body/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true

[node name="karakter3" type="TextureRect" parent="body/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true

[node name="karakter2" type="TextureRect" parent="body/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 144.0
margin_top = 224.0
margin_right = -139.0
margin_bottom = -85.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="body"]
margin_left = 776.0
margin_top = 288.0
margin_right = 1043.0
margin_bottom = 509.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="bagian" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="bagian"]
position = Vector2( 40, 112 )
color = Color( 0.541176, 0.529412, 0.529412, 1 )
polygon = PoolVector2Array( 584, 280, 656, 280, 656, 328, 584, 328, 584, 352, 528, 304, 584, 256 )

[node name="rambut" type="Area2D" parent="bagian"]
position = Vector2( 337, 312 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bagian/rambut"]
shape = SubResource( 2 )

[node name="alis" type="Area2D" parent="bagian"]
position = Vector2( 344, 400 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="bagian/alis"]
position = Vector2( 4, 12 )
shape = SubResource( 4 )

[node name="mata" type="Area2D" parent="bagian"]
position = Vector2( 296, 440 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bagian/mata"]
position = Vector2( 51, 0 )
shape = SubResource( 5 )

[node name="mulut" type="Area2D" parent="bagian"]
position = Vector2( 344, 488 )
collision_layer = 0
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bagian/mulut"]
position = Vector2( 0, 10.25 )
shape = SubResource( 2 )

[node name="alis" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 896, 392 )
collision_layer = 2

[node name="rambut" parent="." instance=ExtResource( 3 )]
position = Vector2( 912, 400 )

[node name="mata2" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 912, 392 )
collision_layer = 4

[node name="mulut" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 912, 400 )
collision_layer = 8

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 12 )]
backScene = ExtResource( 11 )
startTimer = true

[node name="effect" parent="." instance=ExtResource( 13 )]
position = Vector2( 344, 426 )

[node name="hasil" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="narasi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="starting" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="starting"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 17 )

[node name="Laki-lakiTk" type="Sprite" parent="starting"]
position = Vector2( 524, 278 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 18 )

[node name="Laki-lakiTk2" type="Sprite" parent="starting"]
position = Vector2( 664, 280 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 19 )

[node name="Label" type="Label" parent="starting"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.5
margin_top = 47.5
margin_right = 282.5
margin_bottom = 98.5
custom_fonts/font = SubResource( 6 )
text = "Bermain Mengenal aggota tubuh"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 7 )
anims/RESET = SubResource( 8 )

[connection signal="area_entered" from="bagian/rambut" to="." method="_on_rambut_area_entered"]
[connection signal="area_exited" from="bagian/rambut" to="." method="_on_rambut_area_exited"]
[connection signal="area_entered" from="bagian/alis" to="." method="_on_alis_area_entered"]
[connection signal="area_exited" from="bagian/alis" to="." method="_on_alis_area_exited"]
[connection signal="area_entered" from="bagian/mata" to="." method="_on_mata_area_entered"]
[connection signal="area_exited" from="bagian/mata" to="." method="_on_mata_area_exited"]
[connection signal="area_entered" from="bagian/mulut" to="." method="_on_mulut_area_entered"]
[connection signal="area_exited" from="bagian/mulut" to="." method="_on_mulut_area_exited"]
[connection signal="lepas" from="alis" to="." method="_on_alis_lepas"]
[connection signal="lepas" from="rambut" to="." method="_on_rambut_lepas"]
[connection signal="lepas" from="mata2" to="." method="_on_mata2_lepas"]
[connection signal="lepas" from="mulut" to="." method="_on_mulut_lepas"]
